# OmniTreasury-AI

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO.md  DEMO_VIDEO_SCRIPT.md  DEVPOST.md  DEVPOST_FINAL.md  GITHUB_PUSH.md  JUDGING_GUIDE.md  PITCH_DECK.md  QUICK_START.md  README.md  UIPATH_INTEGRATION.md  demo.py  main.py  pyproject.toml  requirements.txt
data/: audit.json
demo_output/: 01_cfo_command_center.html  02_executive_summary.html  03_risk_heatmap.html  04_liquidity_overview.html  05_fx_savings_report.html  06_maestro_cases.html  07_audit_timeline.html  08_upload_center.html  treasury_control_tower.html
sample_data/: entity_register.json  fx_rates.json  liquidity_positions.json  payments.json  risk_thresholds.json  sanctions_list.json
sample_data/swift_samples/: sample_mt103.txt
sample_data/uploads/: 20260615_19B81916_batch_test.csv  20260615_285A0AEE_pipeline_test.txt  20260615_C6B9C2C4_proc_test.json  20260615_CAA80249_gemini-code-1781253472178.txt  batch_payments_june_demo.csv  registry.json  sample_swift_mt103_demo.txt  treasury_payments_q2_demo.json  upload_history.json
screenshots/: README.md  README.txt
scripts/: generate_screenshots.py  generate_upload_demo.py  reset_demo_data.py
src/: __init__.py
src/agents/: __init__.py  base_agent.py  compliance_auditor.py  decision_orchestrator.py  document_intelligence.py  forex_strategist.py  liquidity_balancer.py  risk_intelligence.py
src/core/: __init__.py  config.py  exceptions.py  logging_config.py
src/dashboard/: __init__.py  audit_timeline.py  cfo_dashboard.py  executive_summary.py  fx_report.py  liquidity_overview.py  maestro_dashboard.py  risk_heatmap.py
tests/: __init__.py  test_compliance_engine.py  test_decision_engine.py  test_forex_engine.py  test_liquidity_engine.py  test_risk_engine.py  test_swift_parser.py  test_web_api.py
(+39 files in other folders)
