[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnitreasury-ai"
version = "0.1.0"
description = "Autonomous Treasury Control Tower — UiPath AgentHack 2026"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pydantic==2.12.5",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.2.1",
    "click==8.4.1",
    "typer==0.20.0",
    "rich==14.2.0",
    "structlog==26.1.0",
    "requests==2.32.5",
    "fuzzywuzzy==0.18.0",
    "python-Levenshtein==0.27.3",
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
]

[project.scripts]
omnitreasury = "main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
addopts = "--cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
